added functionality to cart buttons, added pop-out list to menu

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
           <li id="lmbar"><a href="">Current Orders</a></li>
           <li id="lmbar"><a href="{{url_for('order', username=session['username'])}}">Menu</a></li>
           <li id="lmbar"><a href="{{url_for('tabs')}}">User Tabs</a></li>
+          <li id="lmbar"><a href="{{url_for('add_staff')}}">Add Staff Member</a></li>
           
           {% if session['username'] %}
           
