clear cart working

--- a/templates/add_staff_page.html
+++ b/templates/add_staff_page.html
@@ -5,13 +5,13 @@
 <input id="changeform" type="button" value="Click Here to Change Staff Member Password">
 
 <div >
-<div id="joinform" style="display:block" >
+<form id="joinform" style="display:block" method="POST">
     <h2>Join</h2>
     <p><label><input type="text" name="username" required pattern="^\w+$"> Username</label></p>
     <p><label><input type="password" name="password1" required> Password </label></p>
     <p><label><input type="password" name="password2" required> Password again </label></p>
     <p><button type="submit">Submit</button></p>
-</div>
+</form>
 </div>
 <div >
 <form id="changepwdform" style="display:none" method="POST">
@@ -55,23 +55,21 @@ $("#joinform").on('submit', function (event) {
      var pw1 = $(this).find('[name=password1]').val();
      var pw2 = $(this).find('[name=password2]').val();
      if( pw1 != pw2 ) {
-         // something more sophisticated than alert would be nice
-         $(this).reset();
          alert("passwords don't match");
      } else if(pw1.length < 8) {
          alert("passwords must be a minimum of 8 characters long");
      } else {
-          
+        $(this).find('[name=username]').val("");
+        $(this).find('[name=password1]').val("");
+        $(this).find('[name=password2]').val("");  
         $.post(URL,{'username':usr, 'password': pw1},function(resp) { 
         var error = resp.error;
         var username = resp.staffId;
         if(error === true){
                 alert("Error: "+error);
-                // } else {
-                    // alert("The following user was successfully added as a staff member: "+username);
+                } else {
+                    alert("The following user was successfully added as a staff member: "+username);
                 }
-                // var price = resp.price;
-                // $("#[miid=" + resp.miid +"]").find(".name").css('font-weight','bold').text(name+" found");
             },
             'json');
      }
@@ -83,8 +81,6 @@ $("#changepwdform").on('submit', function (event) {
      var pw1 = $(this).find('[name=password1]').val();
      var pw2 = $(this).find('[name=password2]').val();
      if( pw1 != pw2 ) {
-         // something more sophisticated than alert would be nice
-         
          alert("passwords don't match");
      } else if(pw1.length < 8) {
          alert("passwords must be a minimum of 8 characters long");
@@ -100,8 +96,6 @@ $("#changepwdform").on('submit', function (event) {
         } else {
             alert("The following user was successfully added as a staff member: "+username);
         }
-                // var price = resp.price;
-                // $("#[miid=" + resp.miid +"]").find(".name").css('font-weight','bold').text(name+" found");
             },
             'json');
      }
