--- a/templates/shopping_cart_page.html
+++ b/templates/shopping_cart_page.html
@@ -61,26 +61,13 @@
       
     </table>
     <br><button type="submit">Place Order!</button> <!--should 'place order' and add order info to recent orders page-->
-    
-    <!--<button class="clearCart-btn" type="button" name="button"> Clear Cart!</button>-->
-    <!--<form method=post action="{{url_for('clearCart')}}">-->
-    <!--    <input type=submit name=submit value="Clear Cart">-->
-    <!--</form>-->
-    
-    <form id="clearCart-btn" action="{{url_for('clearCart')}}" method="POST">
-        <a href="#" onclick="document.getElementById('clearCart-btn')">Clear Cart!</a>
-    </form>
-    
-    <!--<form id="logout_btn" action="{{url_for('leave_tab')}}" method="POST">-->
-    <!--    <a href="#" onclick="document.getElementById('logout_btn').submit()">Logout</a>-->
-    <!--</form>-->
-    
-    <!--<form id="clearCart-btn" action="{{url_for('clearCart')}}" method="POST">-->
-    <!--  <button type="POST" value="Clear Cart!!">Clear Cart!!</button>-->
-    <!--</form>-->
+   
 
+  </form>
+   
+   <form id="clearCart-btn" action="{{url_for('clearCart')}}" method="POST">
+      <button type="submit" value="Clear Cart!!">Clear Cart!!</button>
     </form>
-
      
       </div>
       
